--- a/po/ku.po
+++ b/po/ku.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-18 12:24-0800\n"
-"PO-Revision-Date: 2017-01-27 11:11+0000\n"
+"PO-Revision-Date: 2017-01-28 15:27+0000\n"
 "Last-Translator: Rokar <Unknown>\n"
 "Language-Team: Kurdish <ku@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-01-28 06:14+0000\n"
+"X-Launchpad-Export-Date: 2017-01-29 05:17+0000\n"
 "X-Generator: Launchpad (build 18315)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
@@ -35,7 +35,7 @@ msgstr "Tê girêdan..."
 
 #: ../src/DeviceRow.vala:39
 msgid "Disconnecting…"
-msgstr ""
+msgstr "verîşandin..."
 
 #: ../src/DeviceRow.vala:41
 msgid "Unable to Connnect"
@@ -75,7 +75,7 @@ msgstr ""
 
 #: ../src/DeviceRow.vala:200
 msgid "Connect"
-msgstr ""
+msgstr "Bê girêdan"
 
 #: ../src/MainView.vala:94
 msgid "Discover new device"
