--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-switchboard-plug-bluetooth (0.1) unstable; urgency=low
+switchboard-plug-bluetooth (0.1) xenial; urgency=medium
 
-  * Initial Release.
+  * Initial release.
 
- -- Corentin Noël <corentin@elementary.io>  Fri, 29 Sep 2016 11:04:10 +0100
+ -- Cody Garver <cody@elementary.io>  Mon, 20 Feb 2017 04:54:32 -0600
