--- a/po/da.po
+++ b/po/da.po
@@ -8,22 +8,22 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-18 12:24-0800\n"
-"PO-Revision-Date: 2017-02-10 06:28+0000\n"
-"Last-Translator: Thorbjørn Erik Køppen Christensen <Awwkaw@gmail.com>\n"
+"PO-Revision-Date: 2017-03-14 17:37+0000\n"
+"Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-02-11 05:57+0000\n"
-"X-Generator: Launchpad (build 18326)\n"
+"X-Launchpad-Export-Date: 2017-03-15 06:55+0000\n"
+"X-Generator: Launchpad (build 18331)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
 msgid "Bluetooth"
-msgstr ""
+msgstr "Bluetooth"
 
 #: ../src/Plug.vala:31
 msgid "Configure Bluetooth Settings"
-msgstr "Rediger Bluetooth indstillinger"
+msgstr "Konfigurer Bluetooth-indstillinger"
 
 #: ../src/DeviceRow.vala:35
 msgid "Connected"
@@ -31,15 +31,15 @@ msgstr "Tilsluttet"
 
 #: ../src/DeviceRow.vala:37
 msgid "Connecting…"
-msgstr "Danner forbindelse…"
+msgstr "Opretter forbindelse…"
 
 #: ../src/DeviceRow.vala:39
 msgid "Disconnecting…"
-msgstr ""
+msgstr "Afbryder forbindelse..."
 
 #: ../src/DeviceRow.vala:41
 msgid "Unable to Connnect"
-msgstr ""
+msgstr "Kan ikke oprette forbindelse"
 
 #: ../src/DeviceRow.vala:43
 msgid "Not Connected"
@@ -47,15 +47,15 @@ msgstr "Ikke tilsluttet"
 
 #: ../src/DeviceRow.vala:85
 msgid "Sharing Settings"
-msgstr "Indstillinger for deling"
+msgstr "Delingsindstillinger"
 
 #: ../src/DeviceRow.vala:107
 msgid "Sound Settings"
-msgstr "Indstillinger for lyd"
+msgstr "Lydindstillinger"
 
 #: ../src/DeviceRow.vala:112
 msgid "Keyboard Settings"
-msgstr "Indstillinger for tastatur"
+msgstr "Tastaturindstillinger"
 
 #: ../src/DeviceRow.vala:116
 msgid "Mouse & Touchpad Settings"
@@ -79,7 +79,7 @@ msgstr "Opret forbindelse"
 
 #: ../src/MainView.vala:94
 msgid "Discover new device"
-msgstr ""
+msgstr "Opdag ny enhed"
 
 #: ../src/MainView.vala:99
 msgid "Forget selected device"
@@ -87,4 +87,4 @@ msgstr "Glem valgte enhed"
 
 #: ../src/HeaderAdapter.vala:33 ../src/HeaderAdapter.vala:57
 msgid "Now Discoverable as \"%s\""
-msgstr ""
+msgstr "Kan nu opdages som \"%s\""
