--- a/po/da.po
+++ b/po/da.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-18 12:24-0800\n"
-"PO-Revision-Date: 2017-03-14 17:37+0000\n"
+"PO-Revision-Date: 2017-03-17 14:44+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish <da@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2017-03-15 06:55+0000\n"
-"X-Generator: Launchpad (build 18331)\n"
+"X-Launchpad-Export-Date: 2017-03-19 06:52+0000\n"
+"X-Generator: Launchpad (build 18332)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
 msgid "Bluetooth"
@@ -35,7 +35,7 @@ msgstr "Opretter forbindelse…"
 
 #: ../src/DeviceRow.vala:39
 msgid "Disconnecting…"
-msgstr "Afbryder forbindelse..."
+msgstr "Afbryder forbindelse…"
 
 #: ../src/DeviceRow.vala:41
 msgid "Unable to Connnect"
@@ -63,7 +63,7 @@ msgstr "Indstillinger for mus & pegeplade"
 
 #: ../src/DeviceRow.vala:120
 msgid "Drawing Tablet Settings"
-msgstr ""
+msgstr "Tegnepladeindstillinger"
 
 #: ../src/DeviceRow.vala:124
 msgid "Printer Settings"
