--- a/po/bg.po
+++ b/po/bg.po
@@ -8,83 +8,83 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-18 12:24-0800\n"
-"PO-Revision-Date: 2016-12-15 05:15+0000\n"
-"Last-Translator: Daniel Fore <Unknown>\n"
+"PO-Revision-Date: 2017-04-05 21:11+0000\n"
+"Last-Translator: Borislav Asenov Krumov <Unknown>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-12-19 05:54+0000\n"
-"X-Generator: Launchpad (build 18298)\n"
+"X-Launchpad-Export-Date: 2017-04-08 06:37+0000\n"
+"X-Generator: Launchpad (build 18343)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
 msgid "Bluetooth"
-msgstr ""
+msgstr "Bluetooth"
 
 #: ../src/Plug.vala:31
 msgid "Configure Bluetooth Settings"
-msgstr ""
+msgstr "Настройване на Bluetooth"
 
 #: ../src/DeviceRow.vala:35
 msgid "Connected"
-msgstr ""
+msgstr "Установена е връзка"
 
 #: ../src/DeviceRow.vala:37
 msgid "Connecting…"
-msgstr ""
+msgstr "Установява се връзка…"
 
 #: ../src/DeviceRow.vala:39
 msgid "Disconnecting…"
-msgstr ""
+msgstr "Прекъсване на връзката..."
 
 #: ../src/DeviceRow.vala:41
 msgid "Unable to Connnect"
-msgstr ""
+msgstr "Не може да се свърже"
 
 #: ../src/DeviceRow.vala:43
 msgid "Not Connected"
-msgstr ""
+msgstr "Няма връзка"
 
 #: ../src/DeviceRow.vala:85
 msgid "Sharing Settings"
-msgstr ""
+msgstr "Настройки на споделянето"
 
 #: ../src/DeviceRow.vala:107
 msgid "Sound Settings"
-msgstr ""
+msgstr "Настройки на звука"
 
 #: ../src/DeviceRow.vala:112
 msgid "Keyboard Settings"
-msgstr ""
+msgstr "Настройки на клавиатурата"
 
 #: ../src/DeviceRow.vala:116
 msgid "Mouse & Touchpad Settings"
-msgstr ""
+msgstr "Настройки на мишката и тъчпада"
 
 #: ../src/DeviceRow.vala:120
 msgid "Drawing Tablet Settings"
-msgstr ""
+msgstr "Настройки на чертожния таблет"
 
 #: ../src/DeviceRow.vala:124
 msgid "Printer Settings"
-msgstr ""
+msgstr "Настройки на принтер"
 
 #: ../src/DeviceRow.vala:187
 msgid "Disconnect"
-msgstr ""
+msgstr "Разкачване"
 
 #: ../src/DeviceRow.vala:200
 msgid "Connect"
-msgstr ""
+msgstr "Свържи се"
 
 #: ../src/MainView.vala:94
 msgid "Discover new device"
-msgstr ""
+msgstr "Открий нови устройства"
 
 #: ../src/MainView.vala:99
 msgid "Forget selected device"
-msgstr ""
+msgstr "Забрави избраното устройство"
 
 #: ../src/HeaderAdapter.vala:33 ../src/HeaderAdapter.vala:57
 msgid "Now Discoverable as \"%s\""
-msgstr ""
+msgstr "Ново устройство като \"%s\""
