--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+switchboard-plug-bluetooth (0.1.1) bionic; urgency=medium
+
+  * New upstream release.
+
+ -- Cody Garver <cody@elementary.io>  Fri, 08 Jun 2018 08:48:46 -0500
+
 switchboard-plug-bluetooth (0.1) xenial; urgency=medium
 
   * Initial release.
