--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+switchboard-plug-bluetooth (2.1.2) bionic; urgency=medium
+
+  * New upstream release.
+
+ -- Cody Garver <cody@elementary.io>  Mon, 15 Oct 2018 16:08:47 -0500
+
 switchboard-plug-bluetooth (0.1.1) bionic; urgency=medium
 
   * New upstream release.
