--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+switchboard-plug-bluetooth (2.2.0) bionic; urgency=medium
+
+  * New upstream release.
+
+ -- Cody Garver <codygarver@gmail.com>  Thu, 24 Jan 2019 07:45:42 -0600
+
 switchboard-plug-bluetooth (2.1.2) bionic; urgency=medium
 
   * New upstream release.
