--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+switchboard-plug-bluetooth (2.2.1) bionic; urgency=medium
+
+  * New upstream release.
+
+ -- Cody Garver <codygarver@gmail.com>  Fri, 25 Jan 2019 00:49:14 -0600
+
 switchboard-plug-bluetooth (2.2.0) bionic; urgency=medium
 
   * New upstream release.
