--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+switchboard-plug-bluetooth (2.2.2) bionic; urgency=medium
+
+  * New upstream release.
+
+ -- Cody Garver <codygarver@gmail.com>  Mon, 08 Apr 2019 21:53:50 -0500
+
 switchboard-plug-bluetooth (2.2.1) bionic; urgency=medium
 
   * New upstream release.
